--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <div class="calculator">
+        <input class="display-operation" type="text">
         <input class="display-result" type="text">
         
         <div class="undo-buttons">
@@ -25,7 +26,7 @@
             <button data-num="4">4</button>
             <button data-num="5">5</button>
             <button data-num="6">6</button>
-            <button data-operator="x">×</button>
+            <button data-operator="*">×</button>
             <button data-num="1">1</button>
             <button data-num="2">2</button>
             <button data-num="3">3</button>
